Fix media view margins and alignment

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
   display: flex;
   justify-content: space-around;
   gap: 20px;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 
 button {
@@ -86,7 +86,6 @@ button:active {
 .slider-container {
   display: flex;
   align-items: center;
-  /* margin-right: 1rem; */
 }
 
 #slider::-webkit-slider-runnable-track {
@@ -191,41 +190,59 @@ button:active {
 }
 
 @media (max-width: 850px) {
-  .main {
-    gap: 50px;
+  .title {
+    font-size: 3rem;
+    margin-bottom: 2rem;
   }
 
   .options {
     width: 150px;
     gap: 16px;
+    flex-direction: column;
+    margin-bottom: 1rem;
   }
 
-  #reset {
-    display: none;
+  .slider-container {
+    display: block;
+    align-items: center;
+  }  
+
+  .slider-label {
+    margin-right: 0px;
   }
 
   .grid {
     width: 400px;
     height: 400px;
+    margin: 15px;
   }
 }
 
 @media (max-width: 650px) {
   .title {
     font-size: 3rem;
+    margin-bottom: 2rem;
   }
 
   .options {
     width: 150px;
     gap: 16px;
+    flex-direction: column;
+    margin-bottom: 1rem;
   }
+  
+  .slider-container {
+    display: block;
+    align-items: center;
+  }  
 
-  #reset {
-    display: none;
+  .slider-label {
+    margin-right: 0px;
   }
 
   .grid {
     width: 300px;
     height: 300px;
+    margin: 15px;
   }
 }
